--- a/content/modules/ROOT/nav.adoc
+++ b/content/modules/ROOT/nav.adoc
@@ -1,7 +1,13 @@
-* xref:module-01.adoc[1. RPM Native Container]
-** xref:module-01.adoc#repositories[Repositories]
-** xref:module-01.adoc#software[Software]
+** xref:index.adoc[Summary of the project]
+*** xref:index.adoc#llms[What is a Large Language Model?]
+*** xref:index.adoc#instructlab[How does this relate to InstructLab?]
+** xref:index.adoc#getting_started[Getting started]
+*** xref:index.adoc#installation[Installing ilab]
+*** xref:index.adoc#initialize[Initialize ilab]
+*** xref:index.adoc#download[Download the model]
+*** xref:index.adoc#serve[Serving the model]
+*** xref:index.adoc#chat[Chat with the model]
+*** xref:index.adoc#training[Training and interacting with the model]
+*** xref:index.adoc#taxononmy[Understanding Taxonomy]
+** xref:index.adoc#conclusion[Conclusion]
 
-* xref:module-02.adoc[2. GitHub Sourced Container]
-** xref:module-02.adoc#prerequisites[Install Prerequisites]
-** xref:module-02.adoc#container[Enable Container]
