--- a/content/modules/ROOT/pages/index.adoc
+++ b/content/modules/ROOT/pages/index.adoc
@@ -162,14 +162,14 @@ Path to taxonomy repo [taxonomy]:
 
 NOTE: When prompted to provide the path to the taxonomy repo, hit kbd:[ENTER] 
 
-[source,sh,role=execute,subs=attributes+]
+[source,sh]
 ----
 `taxonomy` seems to not exist or is empty. Should I clone git@github.com:instruct-lab/taxonomy.git for you? [y/N]: y
 ----
 
 NOTE: When asked if the CLI should clone the taxonomy repo, input 'y' as shown in the above output.
 
-[source,sh,role=execute,subs=attributes+]
+[source,sh]
 ----
 Cloning git@github.com:instruct-lab/taxonomy.git...
 Generating `config.yaml` in the current directory...
@@ -178,7 +178,7 @@ Initialization completed successfully, you're ready to start using `ilab`. Enjoy
 
 NOTE: When asked to enter a directory for the model file, use the default and hit <ENTER>
 
-[source,sh,role=execute,subs=attributes+]
+[source,sh]
 ----
 Path to your model [models/merlinite-7b-lab-Q4_K_M.gguf]:
 ----
@@ -248,18 +248,18 @@ In the other terminal window, Issue the following commands:
 cd ~/instructlab
 source venv/bin/activate
 ----
+.Your Prompt should now look like this
+[source,sh]
+----
+(venv) [instruct@instructlab instructlab]$ 
+----
 
 Now that the environment is sourced, you can begin a chat session with the ilab chat command:
 
 
 [source,sh,role=execute,subs=attributes+]
 ----
-(venv) $ ilab chat -m models/granite-7b-lab-Q4_K_M.GGUF
-----
-.Your Prompt should now look like this
-[source,sh]
-----
-(venv) [instruct@instructlab instructlab]$ 
+ilab chat -m models/granite-7b-lab-Q4_K_M.GGUF
 ----
 
 At this point, you can interact with the model by asking it a question. Example:
@@ -336,14 +336,13 @@ ls -al
 .you should see the taxonomy directory listed as shown below:
 [source,texinfo]
 ----
-drwxr-xr-x@  7 gshipley  staff  224 Apr 24 18:25 .
-drwxr-xr-x  18 gshipley  staff  576 Apr 24 15:29 ..
--rw-r--r--@  1 gshipley  staff  554 Apr 24 09:04 config.yaml
-drwxr-xr-x@  3 gshipley  staff   96 Apr 24 09:39 data
-drwxr-xr-x@  3 gshipley  staff   96 Apr 24 18:18 models
-drwxr-xr-x@ 21 gshipley  staff  672 Apr 24 09:04 taxonomy
-drwxr-xr-x@  7 gshipley  staff  224 Apr 24 09:02 venv
-
+drwxr-xr-x@  7 instruct  staff  224 Apr 24 18:25 .
+drwxr-xr-x  18 instruct  staff  576 Apr 24 15:29 ..
+-rw-r--r--@  1 instruct  staff  554 Apr 24 09:04 config.yaml
+drwxr-xr-x@  3 instruct  staff   96 Apr 24 09:39 data
+drwxr-xr-x@  3 instruct  staff   96 Apr 24 18:18 models
+drwxr-xr-x@ 21 instruct  staff  672 Apr 24 09:04 taxonomy
+drwxr-xr-x@  7 instruct  staff  224 Apr 24 09:02 venv
 ----
 
 Now, we need to create a directory where we can place our files.
