Correct model paths

--- a/content/modules/ROOT/pages/index.adoc
+++ b/content/modules/ROOT/pages/index.adoc
@@ -595,7 +595,7 @@ NOTE: Make sure to stop the previous `ilab serve` command that may still have ru
 
 [source,sh,role=execute,subs=attributes+]
 ----
-ilab serve --model-path ~/instructlab/models/ggml-model-Q4_K_M.gguf
+ilab serve --model-path models/ggml-ilab-pretrained-Q4_K_M.gguf
 ----
 
 NOTE: If you get an error message about not being able to bind to the address, simply kbd:[CTRL+C]  the `ilab serve` command that may still have running in your other terminal tab.
@@ -604,7 +604,7 @@ Start up another chat session with it:
 
 [source,sh,role=execute,subs=attributes+]
 ----
-ilab chat -m models/ggml-model-Q4_K_M.gguf
+ilab chat -m models/ggml-ilab-pretrained-Q4_K_M.gguf
 ----
 
 Verify the results by entering in the original prompt again:
