--- a/content/modules/ROOT/pages/index.adoc
+++ b/content/modules/ROOT/pages/index.adoc
@@ -266,7 +266,7 @@ Now that the environment is sourced, you can begin a chat session with the ilab 
 
 [source,sh,role=execute,subs=attributes+]
 ----
-ilab chat -m models/granite-7b-lab-Q4_K_M.GGUF
+ilab chat -m ./models/granite-7b-lab-Q4_K_M.GGUF
 ----
 
 At this point, you can interact with the model by asking it a question. Example:
@@ -480,7 +480,7 @@ We will then serve the merlinite model, which will serve as the teacher model fo
 [source,sh,role=execute,subs=attributes+]
 ----
 cd ~/instructlab
-ilab serve --model-path ./models/merlinite-7b-lab-Q4_K_M.gguf
+ilab serve --model-path models/merlinite-7b-lab-Q4_K_M.gguf
 ----
 
 We will now run the command to generate the synthetic data:
