Added new content for Summit Connect lab with Parasol application

--- a/content/modules/ROOT/nav.adoc
+++ b/content/modules/ROOT/nav.adoc
@@ -1,13 +1,17 @@
-** xref:index.adoc[InstructLab]
+** xref:index.adoc[Introduction]
 *** xref:index.adoc#llms[What is a Large Language Model?]
+*** xref:index.adoc#how_trained[How are Large Language Models trained?]
 *** xref:index.adoc#instructlab[How does this relate to InstructLab?]
-** xref:index.adoc#getting_started[Getting started]
+** xref:index.adoc#getting_started[Getting started with InstructLab]
 *** xref:index.adoc#installation[Installing ilab]
 *** xref:index.adoc#initialize[Initialize ilab]
 *** xref:index.adoc#download[Download the model]
 *** xref:index.adoc#serve[Serving the model]
 *** xref:index.adoc#chat[Chat with the model]
-*** xref:index.adoc#training[Training and interacting with the model]
-*** xref:index.adoc#taxononmy[Understanding Taxonomy]
-** xref:index.adoc##serve_new_model[Serving the new model]
+** xref:index.adoc#integrating_instructlab[Integrating AI into an Insurance Application]
+*** xref:index.adoc#using_parasol_application[Using the Parasol Application]
+*** xref:index.adoc#taxononmy[Understanding the Taxonomy]
+*** xref:index.adoc#synthetic_data[Generating Synthetic data]
+*** xref:index.adoc#training[Training and Serving the Model]
+*** xref:index.adoc#verify[Verifying the Application]
 ** xref:index.adoc#conclusion[Conclusion]
